--- a/src/evaluation_scripts/web_apps/templates/matches_maps.html
+++ b/src/evaluation_scripts/web_apps/templates/matches_maps.html
@@ -1,10 +1,17 @@
 <!DOCTYPE html>
 <html>
     <head>
-            <meta charset="utf-8">
-            <meta http-equiv="X-UA-Compatible" content="IE=edge">
-            <meta name="viewport" content="width=device-width, initial-scale=1">
-            <title>Flask Google Maps Full Map Example</title>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <title>Flask Google Maps Full Map Example</title>
+        <style>
+            html, body {
+                height: 100%;
+                margin: 0;
+                padding: 0;
+            }
+        </style>
     </head>
     <body>
         {{ matches_map.html }}
