add cluster to matches_maps

--- a/src/evaluation_scripts/web_apps/templates/matches_maps.html
+++ b/src/evaluation_scripts/web_apps/templates/matches_maps.html
@@ -13,6 +13,7 @@
             }
         </style>
     </head>
+    <script src="markerclusterer.js"></script>
     <body>
         {{ matches_map.html }}
     </body>
